Fix
- fixed bug making "no tile" png to cover the map;

--- a/css/style.css
+++ b/css/style.css
@@ -1615,7 +1615,7 @@ body{
     color: white;
     text-align: center;
     display: inline-block;
-    background: url("../imgs/item/item_noitem.png");
+    /*background: url("../imgs/item/item_noitem.png");*/
     background-size: 20px 20px;
     background-repeat: no-repeat;
 }
